# claude-cardputer-adv-buddy

./: README.md  ideas.md  partitions_8mb.csv  platformio.ini
.claude/skills/buddy-mute/: SKILL.md
Sessions/: 2026-05-09-0510-CLI-Bridge-And-Pet-Drafts.md  2026-05-10-2049-SD-Card-Migration-And-Launcher-Compat.md  2026-05-19-0100-StickS3-Bringup-And-Bridge-Permission-Rearchitecture.md
StickS3/: README.md  partitions_8mb.csv  platformio.ini
StickS3/src/: input.cpp  input.h  main_stick.cpp  platform.cpp  platform.h
characters/bufo/: README.md
src/: buddy.cpp  buddy.h  character.cpp  character.h  character_stub.cpp  data.h  gfx_compat.h  input.cpp  input.h  main_adv.cpp  platform.cpp  platform.h  stats.h  xfer.h
src/buddies/: axolotl.cpp  blob.cpp  cactus.cpp  capybara.cpp  cat.cpp  chonk.cpp  doge.cpp  dragon.cpp  duck.cpp  ghost.cpp  goose.cpp  llama.cpp  mushroom.cpp  octopus.cpp  owl.cpp  penguin.cpp  rabbit.cpp  robot.cpp  snail.cpp  turtle.cpp
tools/: prep_character.py
tools/bridge/: README.md  install.py  pyproject.toml  uninstall.py
tools/bridge/src/claude_buddy/: __init__.py  ble_client.py  daemon.py  hook.py  hook_server.py  mute.py  pair.py  persistence.py  push.py  run.py  state.py  status.py  stop.py  transcript.py  wire.py
tools/bridge/tests/: ble_fake.py  conftest.py  test_ble_client.py  test_ble_fake.py  test_daemon_integration.py  test_end_to_end.py  test_hook_entrypoint.py  test_hook_protocol.py  test_install.py  test_mute.py  test_pair.py  test_persistence.py  test_push.py  test_state.py  test_status.py  test_transcript.py  test_wire.py
(+7 files in other folders)
