[project]
name = "claude-buddy"
version = "0.1.0"
description = "Claude Code CLI bridge for the Hardware Buddy BLE protocol"
requires-python = ">=3.11"
dependencies = [
    "bleak>=0.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_buddy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--basetemp=/tmp/pt"
